2006-02-18  mb  <mb@soma.local>

	* slime.el (slime-macroexpansion-minor-mode): New minor mode for
	macroexpansion buffer. Exactly like slime-temp-buffer-mode but
	with slime-macroexpand-again bound to "g".
	(*slime-eval-macroexpand-expression*): New variable. introduced
	for slime-macroexpand-again, used by slime-eval-macroexpand as
	well.
	(slime-eval-macroexpand): Added optional string argument which
	defaults to (slime-sexp-at-point-or-error).
	(slime-macroexpand-again): New function, redoes the last
	macroexpansion.
	(slime-sexp-at-point-or-error): New function. Like
	slime-sexp-at-point but signals an error when slime-sexp-at-point
	would return nil.
 
2006-02-16  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* sbcl-pprint-patch.lisp: New file, adds the annotations feature
	to the SBCL pretty printer.  This is needed for sending
	presentations through pretty-printing streams.
	* present.lisp [sbcl]: Load it here.
	(slime-stream-p, write-annotation) [sbcl]: Handle pretty-streams.

2006-02-10  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp, swank-lispworks.lisp (inspect-for-emacs):
	Use the backend specific method to inspect standard-objects
	because {slot-boundp,slot-value}-using-class don't conform to the
	MOP spec in LW and ACL.

	* swank.lisp (macro-indentation): Don't count '&optional as
	argument.

	* swank-loader.lisp (default-fasl-directory): Include the SLIME
	version.
	(slime-version-string): New.

2006-02-06  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	Show enriched arglists for DEFMETHOD in the echo area when the
	user types SPC after the generic function name.
	
	* swank.lisp (arglist-to-template-string): Unused, removed.
	(extra-keywords): Indicate which part of the actual arglist was
	used to determine the extra keywords.  For MAKE-INSTANCE, don't
	signal an error if the class does not exist.
	(enrich-decoded-arglist-with-extra-keywords): Indicate which part